fixed buttons on mobile

--- a/style.css
+++ b/style.css
@@ -334,6 +334,10 @@ header img {
 
 
 @media screen and (max-width: 1242px) {
+    .button-inactive{
+        width: 100%;
+        margin-right: 0;
+    }
     .button-filled {
         width: 100%;
 
